# ompi

ompi/mca/coll/base/: coll_base_find_available.c
ompi/mca/coll/basic/: coll_basic_allreduce.c  coll_basic_module.c  coll_basic_reduce.c
ompi/mca/coll/fca/: coll_fca_module.c
ompi/mca/coll/hcoll/: coll_hcoll_module.c
ompi/mca/coll/offloaded/: Makefile.am  coll_offloaded.h  coll_offloaded_allreduce.c  coll_offloaded_component.c  coll_offloaded_decision_dynamic.c  coll_offloaded_decision_fixed.c  coll_offloaded_dynamic_file.c  coll_offloaded_dynamic_file.h  coll_offloaded_dynamic_rules.c  coll_offloaded_dynamic_rules.h  coll_offloaded_module.c  coll_offloaded_reduce.c  coll_offloaded_reduce_decision.c  owner.txt
ompi/mca/coll/self/: coll_self_module.c
ompi/mca/coll/sync/: coll_sync_module.c
ompi/mca/coll/tuned/: coll_tuned_allreduce_decision.c  coll_tuned_decision_fixed.c  coll_tuned_module.c  coll_tuned_reduce_decision.c
